# til

./: .gitmodules  README.md  _config.yml  add_entry.sh  generate_index.sh  generate_index.ts
.github/workflows/: generate_readme.yaml
cpp/2025-06-12_vcpkg/: CMakeLists.txt  README.md  main.cpp  vcpkg-configuration.json
crypto/2025-07-19_asmuth-bloom/: README.md  asmuthbloom.go  asmuthbloom_test.go  go.mod  main.go
crypto/2025-07-19_crt-secret-sharing/: README.md  go.mod
crypto/2025-08-21_beaver-triples/: README.md  beaver_triples.go  beaver_triples_test.go  go.mod
go/2023-06-02_connectrpc/: buf.gen.yaml  embed.go  generate.go  go.mod  go.sum
go/2023-08-13_test-overlay/: README.md  example.go  example_test.go  go.mod  overlay-mock.json
go/2025-12-29_manage-vettools/: README.md  go.mod  go.work  go.work.sum  main.go
htmx/2025-06-16-htmx-traq-client/: Dockerfile  deno.jsonc  main.tsx
htmx/2025-06-16_htmx-traq-client/: README.md  deno.jsonc  main.tsx
javascript/2025-04-11_myjsx/: main.tsx
javascript/2025-08-19_claude-code-api/: README.md  deno.jsonc  mod.min.js  mod.ts  openai.d.ts
javascript/2025-09-09_svelte-on-deno/: deno.jsonc  package.json
javascript/2025-09-09_sveltekit-on-deno/: package.json
jsx/2025-04-11_myjsx/: deno.jsonc
python/2025-04-30_marimo/: README.md  hello.py  intro.py  pyproject.toml
python/2025-05-29_pymupdf/: .gitignore  main.py  pyproject.toml
quarto/2024-01-31_quarto-rye/: .gitignore  README.md  _quarto.yml  pyproject.toml
quarto/2024-01-31_quarto-rye/src/: hello.qmd
vlang/2026-04-26_todoapp/: .gitignore  README.md  (+2 more)
(+72 files in other folders)
