[project]
dependencies = [
  "litellm>=1.71.2",
  "pymupdf>=1.26.0",
]
description = "Add your description here"
name = "2025-05-29-pymupdf"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "python-lsp-server>=1.12.2",
  "ruff>=0.11.11",
]
