[project]
name = "quatro-playground"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "ras0q", email = "ras0q@users.noreply.github.com" }]
dependencies = [
    "matplotlib>=3.8.2",
    "ipykernel>=6.29.0",
    "numpy>=1.26.3",
    "pyyaml>=6.0.1",
    "nbformat>=5.9.2",
    "nbclient>=0.9.0",
    "quarto-cli>=1.4.549",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/quatro_playground"]
